fixed truncation on news item text

--- a/resources/sass/news.scss
+++ b/resources/sass/news.scss
@@ -73,12 +73,12 @@
     position: absolute;
     top: 0;
     left: 0;
-    height: 65%;
+    height: 50%;
     width: 100%;
 }
 .news-item_text {
     position: absolute;
-    top: 65%;
+    top: 50%;
     left: 0;
     height: 100%;
     width: 100%;
